new question on qualifications and programmes

--- a/app/views/prototypes/non-teacher/qualification-type.html
+++ b/app/views/prototypes/non-teacher/qualification-type.html
@@ -86,7 +86,7 @@
 <div class="govuk-form-group">
   <fieldset class="govuk-fieldset" aria-describedby="citizenship-conditional-hint">
     
-    <div class="govuk-checkboxes" data-module="govuk-checkboxes">
+   <div class="govuk-checkboxes" data-module="govuk-checkboxes">
       <div class="govuk-checkboxes__item">
         <input class="govuk-checkboxes__input" id="citizenship-conditional" name="citizen" type="checkbox" value="email" data-aria-controls="conditional-citizenship-conditional">
         <label class="govuk-label govuk-checkboxes__label" for="citizenship-conditional">
@@ -102,22 +102,19 @@
         </div>
 
       </div>
-
-
-      </div>
+      
+    </div>
     </div>
 
-
-
-
     </div>
-
-
-
-  
 
     </div>
   </div>
+
+
+
+
+
   <div class="govuk-accordion__section ">
     <div class="govuk-accordion__section-header">
       <h2 class="govuk-accordion__section-heading">
@@ -126,102 +123,103 @@
         </span>
       </h2>
     </div>
-     <span id="sort-code-hint" class="govuk-hint">
-    T levels, apprenticeship programmes
-  </span>
+    
     <div id="accordion-default-content-2" class="govuk-accordion__section-content" aria-labelledby="accordion-default-heading-2">
       <div class="govuk-checkboxes">
       <div class="govuk-checkboxes__item">
         <input class="govuk-checkboxes__input" id="waste" name="waste" type="checkbox" value="carcasses">
         <label class="govuk-label govuk-checkboxes__label" for="waste">
-          Arts, Media and Publishing
+          Apprenticeships 
         </label>
+        &nbsp; &nbsp; <span id="sort-code-hint" class="govuk-hint">
+     Intermediate, Advanced, Higher or Degree apprenticeships
+  </span>
       </div>
       <div class="govuk-checkboxes__item">
         <input class="govuk-checkboxes__input" id="waste-2" name="waste" type="checkbox" value="mines">
         <label class="govuk-label govuk-checkboxes__label" for="waste-2">
-          Agriculture, Environmental and Animal Care
-        </label>
+          Adult Education Budget provision </label>
+        &nbsp; &nbsp; <span id="sort-code-hint" class="govuk-hint">
+     English and maths, vocational qualifications, digital entitlement, employment, ESOL
+  </span>
       </div>
       <div class="govuk-checkboxes__item">
         <input class="govuk-checkboxes__input" id="waste-3" name="waste" type="checkbox" value="farm">
         <label class="govuk-label govuk-checkboxes__label" for="waste-3">
-          Business and Administrative
+          16-19 Study Programme
         </label>
       </div>
       <div class="govuk-checkboxes__item">
         <input class="govuk-checkboxes__input" id="waste" name="waste" type="checkbox" value="carcasses">
         <label class="govuk-label govuk-checkboxes__label" for="waste">
-          Catering and Hospitality
+          Traineeships
         </label>
       </div>
       <div class="govuk-checkboxes__item">
         <input class="govuk-checkboxes__input" id="waste" name="waste" type="checkbox" value="carcasses">
         <label class="govuk-label govuk-checkboxes__label" for="waste">
-          Childcare and Education
+          Functional Skills (English, Maths and / or IT)
         </label>
       </div>
       <div class="govuk-checkboxes__item">
         <input class="govuk-checkboxes__input" id="waste" name="waste" type="checkbox" value="carcasses">
         <label class="govuk-label govuk-checkboxes__label" for="waste">
-          Construction
+          Work and Health Programme
         </label>
       </div>
       <div class="govuk-checkboxes__item">
         <input class="govuk-checkboxes__input" id="waste" name="waste" type="checkbox" value="carcasses">
         <label class="govuk-label govuk-checkboxes__label" for="waste">
-          Creative and Design
+          Adult Offender Learning
         </label>
       </div>
       <div class="govuk-checkboxes__item">
         <input class="govuk-checkboxes__input" id="waste" name="waste" type="checkbox" value="carcasses">
         <label class="govuk-label govuk-checkboxes__label" for="waste">
-          Digital / IT
+          Technical Certificates
         </label>
       </div>
       <div class="govuk-checkboxes__item">
         <input class="govuk-checkboxes__input" id="waste" name="waste" type="checkbox" value="carcasses">
         <label class="govuk-label govuk-checkboxes__label" for="waste">
-          Engineering and Manufacturing
+          T Levels
         </label>
       </div>
       <div class="govuk-checkboxes__item">
         <input class="govuk-checkboxes__input" id="waste" name="waste" type="checkbox" value="carcasses">
         <label class="govuk-label govuk-checkboxes__label" for="waste">
-          Hair and Beauty
+          Applied general qualifications
         </label>
       </div>
       <div class="govuk-checkboxes__item">
         <input class="govuk-checkboxes__input" id="waste" name="waste" type="checkbox" value="carcasses">
         <label class="govuk-label govuk-checkboxes__label" for="waste">
-          Health and Science
+          Preparation for work
         </label>
       </div>
       <div class="govuk-checkboxes__item">
         <input class="govuk-checkboxes__input" id="waste" name="waste" type="checkbox" value="carcasses">
         <label class="govuk-label govuk-checkboxes__label" for="waste">
-          Legal, Finance and Accounting
+          Life skills
         </label>
       </div>
       <div class="govuk-checkboxes__item">
         <input class="govuk-checkboxes__input" id="waste" name="waste" type="checkbox" value="carcasses">
         <label class="govuk-label govuk-checkboxes__label" for="waste">
-          Sports, Leisure, Travel and Tourism
-  Protective Services
+          Community Learning
   
         </label>
       </div>
       <div class="govuk-checkboxes__item">
         <input class="govuk-checkboxes__input" id="waste" name="waste" type="checkbox" value="carcasses">
         <label class="govuk-label govuk-checkboxes__label" for="waste">
-          Retail and Commercial Enterprise
-  Sales, Marketing and Procurement
+          Family Learning
         </label>
       </div>
       <div class="govuk-checkboxes__item">
         <input class="govuk-checkboxes__input" id="waste" name="waste" type="checkbox" value="carcasses">
         <label class="govuk-label govuk-checkboxes__label" for="waste">
-          Social Care
+          SEN or supported learning provision
         </label>
       </div>
 
@@ -240,7 +238,7 @@
       <div class="govuk-checkboxes__item">
         <input class="govuk-checkboxes__input" id="citizenship-conditional" name="citizen" type="checkbox" value="email" data-aria-controls="conditional-citizenship-conditional">
         <label class="govuk-label govuk-checkboxes__label" for="citizenship-conditional">
-          Other technical / vocational subject 1 
+          Other vocational, work-based, technical or other non-academic learning programmes 
         </label>
       </div>
       <div class="govuk-checkboxes__conditional govuk-checkboxes__conditional--hidden" id="conditional-citizenship-conditional">
@@ -252,56 +250,13 @@
         </div>
 
       </div>
-
-
-
-
-      <div class="govuk-checkboxes__item">
-        <input class="govuk-checkboxes__input" id="citizenship-conditional-2" name="citizen" type="checkbox" value="phone" data-aria-controls="conditional-citizenship-conditional-2">
-        <label class="govuk-label govuk-checkboxes__label" for="citizenship-conditional-2">
-          Other technical / vocational subject 2
-        </label>
-      </div>
-      <div class="govuk-checkboxes__conditional govuk-checkboxes__conditional--hidden" id="conditional-citizenship-conditional-2">
-        <div class="govuk-form-group">
-          <label class="govuk-label" for="contact-by-phone">
-            
-          </label>
-          <input class="govuk-input govuk-!-width-one-third" id="contact-by-phone" name="contact-by-phone" type="tel">
-        </div>
-
-      </div>
-      <div class="govuk-checkboxes__item">
-        <input class="govuk-checkboxes__input" id="citizenship-conditional-3" name="citizen" type="checkbox" value="text message" data-aria-controls="conditional-citizenship-conditional-3">
-        <label class="govuk-label govuk-checkboxes__label" for="citizenship-conditional-3">
-          Other technical / vocational subject 3
-        </label>
-      </div>
-      <div class="govuk-checkboxes__conditional govuk-checkboxes__conditional--hidden" id="conditional-citizenship-conditional-3">
-        <div class="govuk-form-group">
-          <label class="govuk-label" for="contact-by-text">
-            
-          </label>
-          <input class="govuk-input govuk-!-width-one-third" id="contact-by-text" name="contact-by-text" type="tel">
-        </div>
-
-      </div>
+      
     </div>
-  
-
 
     </div>
     </div>
   </div>
  
-
-  
-
-    
-
-
-
-
    
   </fieldset>
 
