new question on qualifications and programmes

--- a/app/views/prototypes/non-teacher/qualification-type.html
+++ b/app/views/prototypes/non-teacher/qualification-type.html
@@ -131,17 +131,19 @@
         <label class="govuk-label govuk-checkboxes__label" for="waste">
           Apprenticeships 
         </label>
-        &nbsp; &nbsp; <span id="sort-code-hint" class="govuk-hint">
-     Intermediate, Advanced, Higher or Degree apprenticeships
-  </span>
+        <span id="nationality-item-hint" class="govuk-hint govuk-checkboxes__hint">
+          Intermediate, Advanced, Higher or Degree apprenticeships
+        </span>
+
       </div>
       <div class="govuk-checkboxes__item">
         <input class="govuk-checkboxes__input" id="waste-2" name="waste" type="checkbox" value="mines">
         <label class="govuk-label govuk-checkboxes__label" for="waste-2">
           Adult Education Budget provision </label>
-        &nbsp; &nbsp; <span id="sort-code-hint" class="govuk-hint">
-     English and maths, vocational qualifications, digital entitlement, employment, ESOL
-  </span>
+        <span id="nationality-item-hint" class="govuk-hint govuk-checkboxes__hint">
+          English, maths, vocational, digital entitlement, employment, ESOL
+        </span>
+
       </div>
       <div class="govuk-checkboxes__item">
         <input class="govuk-checkboxes__input" id="waste-3" name="waste" type="checkbox" value="farm">
