--- a/app/views/prototypes/small-itp/complete-john.html
+++ b/app/views/prototypes/small-itp/complete-john.html
@@ -57,7 +57,7 @@
           
             <li class="app-task-list__item">
               <span class="app-task-list__task-name">
-                <a href="subject-type" aria-describedby="company-information-completed">
+                <a href="qualification-type" aria-describedby="company-information-completed">
                   Qualifications and subjects
                 </a>
               </span>
