new question on qualifications and programmes

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -90,8 +90,8 @@
       </p><br>
       <p>Small ITP non teacher - <a href="/prototypes/non-teacher/details">Shorter flow for Julie Anne Angelo</a>
       </p>
-      <p>On 'My Staff' after adding John - add another member = Julie Anne Angelo.<br>Select 'Senior leadership' role and 'No' to Does their work include teaching?. </p>
-
+      <p>On 'My Staff' after adding John - add another member = Julie Anne Angelo.<br>Select 'Senior leadership' role and 'No' to Does their work include teaching?.</p>
+      <p>Added new question to both in staff section called qualification-type</p>
 
       <br><br>
 
