new question on qualifications and programmes

--- a/app/views/prototypes/non-teacher/subject-type.html
+++ b/app/views/prototypes/non-teacher/subject-type.html
@@ -51,9 +51,9 @@
         </span>
       </h2>
     </div>
-    <span id="sort-code-hint" class="govuk-hint">
+    <!--<span id="sort-code-hint" class="govuk-hint">
     A levels and GCSEs
-  </span>
+  </span>-->
     
     <div id="accordion-default-content-1" class="govuk-accordion__section-content" aria-labelledby="accordion-default-heading-1">
        <div class="govuk-checkboxes">
@@ -249,9 +249,9 @@
         </span>
       </h2>
     </div>
-     <span id="sort-code-hint" class="govuk-hint">
+     <!--<span id="sort-code-hint" class="govuk-hint">
     T levels, apprenticeship programmes
-  </span>
+  </span>-->
     <div id="accordion-default-content-2" class="govuk-accordion__section-content" aria-labelledby="accordion-default-heading-2">
       <div class="govuk-checkboxes">
       <div class="govuk-checkboxes__item">
