--- a/app/views/prototypes/small-itp/complete-john-four.html
+++ b/app/views/prototypes/small-itp/complete-john-four.html
@@ -59,7 +59,7 @@
             <li class="app-task-list__item">
               <span class="app-task-list__task-name">
                 <a href="qualification-type" aria-describedby="company-information-completed">
-                  Qualifications and subjects
+                  Qualifications and programmes
                 </a>
               </span>
               <strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Completed</strong>
