changes to subjects

--- a/app/views/prototypes/non-teacher/qualification-type.html
+++ b/app/views/prototypes/non-teacher/qualification-type.html
@@ -47,7 +47,7 @@
     <div class="govuk-accordion__section-header">
       <h2 class="govuk-accordion__section-heading">
         <span class="govuk-accordion__section-button" id="accordion-default-heading-1">
-          Academic
+          Academic qualifications
         </span>
       </h2>
     </div>
@@ -115,11 +115,12 @@
 
 
 
+ 
   <div class="govuk-accordion__section ">
     <div class="govuk-accordion__section-header">
       <h2 class="govuk-accordion__section-heading">
         <span class="govuk-accordion__section-button" id="accordion-default-heading-2">
-          Vocational
+          Vocational programmes
         </span>
       </h2>
     </div>
@@ -150,6 +151,9 @@
         <label class="govuk-label govuk-checkboxes__label" for="waste-3">
           16-19 Study Programme
         </label>
+        <span id="nationality-item-hint" class="govuk-hint govuk-checkboxes__hint">
+          Excluding A Levels
+        </span>
       </div>
       <div class="govuk-checkboxes__item">
         <input class="govuk-checkboxes__input" id="waste" name="waste" type="checkbox" value="carcasses">
@@ -160,27 +164,27 @@
       <div class="govuk-checkboxes__item">
         <input class="govuk-checkboxes__input" id="waste" name="waste" type="checkbox" value="carcasses">
         <label class="govuk-label govuk-checkboxes__label" for="waste">
-          Functional Skills (English, Maths and / or IT)
+          Functional Skills (English, Maths and IT)
         </label>
       </div>
-      <div class="govuk-checkboxes__item">
+      <!--<div class="govuk-checkboxes__item">
         <input class="govuk-checkboxes__input" id="waste" name="waste" type="checkbox" value="carcasses">
         <label class="govuk-label govuk-checkboxes__label" for="waste">
           Work and Health Programme
         </label>
-      </div>
+      </div>-->
       <div class="govuk-checkboxes__item">
         <input class="govuk-checkboxes__input" id="waste" name="waste" type="checkbox" value="carcasses">
         <label class="govuk-label govuk-checkboxes__label" for="waste">
           Adult Offender Learning
         </label>
       </div>
-      <div class="govuk-checkboxes__item">
+     <!-- <div class="govuk-checkboxes__item">
         <input class="govuk-checkboxes__input" id="waste" name="waste" type="checkbox" value="carcasses">
         <label class="govuk-label govuk-checkboxes__label" for="waste">
           Technical Certificates
         </label>
-      </div>
+      </div>-->
       <div class="govuk-checkboxes__item">
         <input class="govuk-checkboxes__input" id="waste" name="waste" type="checkbox" value="carcasses">
         <label class="govuk-label govuk-checkboxes__label" for="waste">
@@ -190,34 +194,34 @@
       <div class="govuk-checkboxes__item">
         <input class="govuk-checkboxes__input" id="waste" name="waste" type="checkbox" value="carcasses">
         <label class="govuk-label govuk-checkboxes__label" for="waste">
-          Applied general qualifications
+          Applied General Qualifications and Technical Certificates
         </label>
       </div>
       <div class="govuk-checkboxes__item">
         <input class="govuk-checkboxes__input" id="waste" name="waste" type="checkbox" value="carcasses">
         <label class="govuk-label govuk-checkboxes__label" for="waste">
-          Preparation for work
+          Preparation for work and Life Skills
         </label>
       </div>
-      <div class="govuk-checkboxes__item">
+      <!--<div class="govuk-checkboxes__item">
         <input class="govuk-checkboxes__input" id="waste" name="waste" type="checkbox" value="carcasses">
         <label class="govuk-label govuk-checkboxes__label" for="waste">
           Life skills
         </label>
-      </div>
+      </div>-->
       <div class="govuk-checkboxes__item">
         <input class="govuk-checkboxes__input" id="waste" name="waste" type="checkbox" value="carcasses">
         <label class="govuk-label govuk-checkboxes__label" for="waste">
-          Community Learning
+          Community Learning and Family Learning
   
         </label>
       </div>
-      <div class="govuk-checkboxes__item">
+     <!-- <div class="govuk-checkboxes__item">
         <input class="govuk-checkboxes__input" id="waste" name="waste" type="checkbox" value="carcasses">
         <label class="govuk-label govuk-checkboxes__label" for="waste">
           Family Learning
         </label>
-      </div>
+      </div>--->
       <div class="govuk-checkboxes__item">
         <input class="govuk-checkboxes__input" id="waste" name="waste" type="checkbox" value="carcasses">
         <label class="govuk-label govuk-checkboxes__label" for="waste">
@@ -225,11 +229,7 @@
         </label>
       </div>
 
-     
-
-      
-
-      
+        
     
     <div class="govuk-checkboxes" data-module="govuk-checkboxes">
       <div class="govuk-checkboxes__item">
