--- a/app/views/prototypes/non-teacher/complete-john.html
+++ b/app/views/prototypes/non-teacher/complete-john.html
@@ -58,7 +58,7 @@
             <li class="app-task-list__item">
               <span class="app-task-list__task-name">
                 <a href="subject-type" aria-describedby="company-information-completed">
-                  Qualifications and subjects
+                  Qualifications and programmes
                 </a>
               </span>
              
