edits around teachers and assessors

--- a/app/views/prototypes/small-itp/role.html
+++ b/app/views/prototypes/small-itp/role.html
@@ -52,7 +52,7 @@
         
 
         <span id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
-          This could include principals and vice-principals of colleges, working directors and CEOs of organisations and companies, and other people who would be considered part of a senior management team
+          Principals and vice-principals, working directors and CEOs, other people who would be considered part of a senior management team
         </span>
       </div><br>
 
@@ -62,7 +62,7 @@
           Teacher
         </label>
         <span id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
-          Includes tutors, trainers, instructors and assessors
+          Tutors, trainers and instructors
         </span>
       </div><br>
 
