--- a/app/views/prototypes/non-teacher/role.html
+++ b/app/views/prototypes/non-teacher/role.html
@@ -52,17 +52,17 @@
         
 
         <span id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
-          This could include principals and vice-principals of colleges, working directors and CEOs of organisations and companies, and other people who would be considered part of a senior management team
+          Principals and vice-principals, working directors and CEOs, other people who would be considered part of a senior management team
         </span>
       </div><br>
 
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="where-do-you-live" name="where-do-you-live" type="radio" value="england">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live">
-          Teacher
+          Teachers
         </label>
         <span id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
-          Includes tutors, trainers, instructors and assessors
+          Tutors, trainers and instructors
         </span>
       </div><br>
 
