--- a/app/views/prototypes/non-teacher/staff-totals.html
+++ b/app/views/prototypes/non-teacher/staff-totals.html
@@ -50,7 +50,7 @@ Include part-time staff.
       Senior leadership 
     </label>
     <span id="sort-code-hint" class="govuk-hint">
-          This could include principals and vice-principals of colleges, working directors and CEOs of organisations and companies, and other people who would be considered part of a senior management team
+          Principals and vice-principals, working directors and CEOs, other people who would be considered part of a senior management team
         </span>
     <input class="govuk-input govuk-input--width-10" id="address-postcode" name="address-postcode" type="text">
   </div>
@@ -58,10 +58,10 @@ Include part-time staff.
 
   <div class="govuk-form-group">
     <label class="govuk-label" for="address-postcode">
-      Teacher
+      Teachers
     </label>
    <span id="sort-code-hint" class="govuk-hint">
-          Includes tutors, trainers, instructors and assessors
+          Tutors, trainers and instructors
         </span>
     <input class="govuk-input govuk-input--width-10" id="" name="" type="text">
   </div>
