--- a/app/views/prototypes/small-itp/role.html
+++ b/app/views/prototypes/small-itp/role.html
@@ -52,14 +52,14 @@
         
 
         <span id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
-          Principals and vice-principals, working directors and CEOs, other people who would be considered part of a senior management team
+          Principals and vice-principals, working directors and CEOs, others who are part of a senior management team
         </span>
       </div><br>
 
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="where-do-you-live" name="where-do-you-live" type="radio" value="england">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live">
-          Teacher
+          Teachers
         </label>
         <span id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
           Tutors, trainers and instructors
