--- a/app/views/prototypes/small-itp/staff-totals.html
+++ b/app/views/prototypes/small-itp/staff-totals.html
@@ -50,7 +50,7 @@ Include part-time staff.
       Senior leadership 
     </label>
     <span id="sort-code-hint" class="govuk-hint">
-          Principals and vice-principals, working directors and CEOs, other people who would be considered part of a senior management team
+          Principals and vice-principals, working directors and CEOs, others who are part of a senior management team
         </span>
     <input class="govuk-input govuk-input--width-10" id="address-postcode" name="address-postcode" type="text">
   </div>
