edits around teachers and assessors

--- a/app/views/prototypes/non-teacher/role.html
+++ b/app/views/prototypes/non-teacher/role.html
@@ -52,7 +52,7 @@
         
 
         <span id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
-          Principals and vice-principals, working directors and CEOs, other people who would be considered part of a senior management team
+          Principals and vice-principals, working directors and CEOs, others who are part of a senior management team
         </span>
       </div><br>
 
@@ -76,11 +76,6 @@
           Learner mentors, pastoral tutors, assessors, technicians, teaching assistants
         </span>
       </div><br>
-
-       <br>
-
-
-      
       
 
 
