edits around teachers and assessors

--- a/app/views/prototypes/non-teacher/role.html
+++ b/app/views/prototypes/non-teacher/role.html
@@ -75,7 +75,7 @@
         <span id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
           Learner mentors, pastoral tutors, assessors, technicians, teaching assistants
         </span>
-      </div><br>
+      </div>
       
 
 
