edits around teachers and assessors

--- a/app/views/prototypes/non-teacher/role.html
+++ b/app/views/prototypes/non-teacher/role.html
@@ -52,17 +52,17 @@
         
 
         <span id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
-          Principals and vice-principals, working directors and CEOs, others who are part of a senior management team
+          Principal, vice-principal, working director, CEO, part of a senior management team
         </span>
       </div><br>
 
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="where-do-you-live" name="where-do-you-live" type="radio" value="england">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live">
-          Teachers
+          Teacher
         </label>
         <span id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
-          Tutors, trainers and instructors
+          Tutor, trainer, instructor
         </span>
       </div><br>
 
@@ -73,7 +73,7 @@
         </label>
 
         <span id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
-          Learner mentors, pastoral tutors, assessors, technicians, teaching assistants
+          Learner mentor, pastoral tutor, assessor, technician, teaching assistant
         </span>
       </div>
       
