new start page copy

--- a/app/views/prototypes/small-itp/start-intro2.html
+++ b/app/views/prototypes/small-itp/start-intro2.html
@@ -43,7 +43,7 @@
         <h1 class="govuk-heading-xl">Tell us about your further education staff</h1>
         
 
-        <p class="govuk-body">Collecting accurate further education workforce data will help us to:</p>
+        <p class="govuk-body">Collecting accurate data will help us to:</p>
 
         <ul class="govuk-list govuk-list--bullet">
           <li>bid for more investment in further education </li>
