new start page copy

--- a/app/views/prototypes/small-itp/home.html
+++ b/app/views/prototypes/small-itp/home.html
@@ -54,7 +54,7 @@
                 </div>
     
                 <div class="govuk-grid-column-one-third tile">
-                    <a class="min-height" href="start-intro">
+                    <a class="min-height" href="start-intro2">
                         <span class="govuk-heading-m heading">Submit your staff details</span>
                         <span class="govuk-heading-s heading">28 November 2021</span>
                     </a>
