--- a/app/views/index.html
+++ b/app/views/index.html
@@ -95,6 +95,13 @@
 
       <br><br>
 
+      <h2 class="govuk-heading-m">Second set of research with ITP's</h2>
+
+      <p>Small ITP flow - <a href="/prototypes/itp2/details">Start</a>
+      </p>
+
+      <br><br>
+
 
       <h2 class="govuk-heading-m">Examples and documentation</h2>
 
