new start page copy

--- a/app/views/prototypes/itp2/answers-provider.html
+++ b/app/views/prototypes/itp2/answers-provider.html
@@ -41,7 +41,7 @@
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Employed staff
+              Managers
             </dt>
             <dd class="govuk-summary-list__value">
               10
@@ -54,57 +54,39 @@
             </dd>
           </div>
 
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Teachers
+            </dt>
+            <dd class="govuk-summary-list__value">
+              100
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="#">
+                Change<span class="govuk-visually-hidden"> address</span>
+              </a>
+            </dd>
+          </div>
+
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Support
+            </dt>
+            <dd class="govuk-summary-list__value">
+           10
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="#">
+                Change<span class="govuk-visually-hidden"> address</span>
+              </a>
+            </dd>
+          </div>
+
 
           
 
 
         </dl>
-
-
-
-        <h2 class="govuk-heading-m">Salary spend</h2>
-        
-
-       
-        <dl class="govuk-summary-list govuk-!-margin-bottom-9">
-
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              Total spend
-            </dt>
-            <dd class="govuk-summary-list__value">
-              £360000
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
-                Change
-                <span class="govuk-visually-hidden"> address</span>
-              </a>
-            </dd>
-          </div>
-
-
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              Percentage of total
-            </dt>
-            <dd class="govuk-summary-list__value">
-              <p class="govuk-body">80%</p>
-            </dd>
-
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">Change
-                <span class="govuk-visually-hidden"> contact details</span>
-              </a>
-            </dd>
-          </div>
-
-
-        </dl>
-
-
-
-
 
 
         <h2 class="govuk-heading-m">Vacancies</h2>
@@ -116,7 +98,7 @@
         
            <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Senior leadership 
+              Managers
             </dt>
             <dd class="govuk-summary-list__value">
               More than 10
@@ -144,7 +126,7 @@
 
            <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Teaching support
+              Support
             </dt>
             <dd class="govuk-summary-list__value">
               1 - 5
