--- a/app/views/prototypes/itp2/easy.html
+++ b/app/views/prototypes/itp2/easy.html
@@ -43,7 +43,7 @@
     <div class="govuk-accordion__section-header">
       <h2 class="govuk-accordion__section-heading">
         <span class="govuk-accordion__section-button" id="accordion-default-heading-1">
-          Senior leadership
+          Managers
         </span>
       </h2>
     </div>
@@ -140,7 +140,7 @@
     <div class="govuk-accordion__section-header">
       <h2 class="govuk-accordion__section-heading">
         <span class="govuk-accordion__section-button" id="accordion-default-heading-3">
-          Teaching support
+          Support
         </span>
       </h2>
     </div>
