--- a/app/views/prototypes/itp2/staff-totals.html
+++ b/app/views/prototypes/itp2/staff-totals.html
@@ -46,33 +46,33 @@ Include part-time staff.
 </p><br>
 
   <div class="govuk-form-group">
-    <label class="govuk-label" for="address-postcode">
-      Senior leadership 
+    <label class="govuk-label" for="managers">
+      Managers
     </label>
     <span id="sort-code-hint" class="govuk-hint">
-          Principals and vice-principals, working directors and CEOs, others who are part of a senior management team
+          Principals, vice-principals, working directors, CEOs, senior managers
         </span>
     <input class="govuk-input govuk-input--width-10" id="address-postcode" name="address-postcode" type="text">
   </div>
 
 
   <div class="govuk-form-group">
-    <label class="govuk-label" for="address-postcode">
-      Teachers
+    <label class="govuk-label" for="teachers">
+      Teachers, tutors, trainers and instructors
     </label>
    <span id="sort-code-hint" class="govuk-hint">
-          Tutors, trainers and instructors
+          Staff who teach as part of their role
         </span>
     <input class="govuk-input govuk-input--width-10" id="" name="" type="text">
   </div>
 
 
   <div class="govuk-form-group">
-    <label class="govuk-label" for="address-postcode">
-      Teaching support
+    <label class="govuk-label" for="support">
+      Support
     </label>
 <span id="sort-code-hint" class="govuk-hint">
-          Learner mentors, pastoral tutors, assessors, technicians, teaching assistants
+          Mentors, assessors, technicians, teaching assistants
         </span>
 
     <input class="govuk-input govuk-input--width-10" id="" name="" type="text">
@@ -83,7 +83,7 @@ Include part-time staff.
 </fieldset><br><br>
 
 
-          <a href="staff" class="govuk-button show-continue" style="display: inline;">
+          <a href="many-vacancies" class="govuk-button show-continue" style="display: inline;">
       Save and continue
     </a>
        
