--- a/app/views/prototypes/itp2/many-vacancies.html
+++ b/app/views/prototypes/itp2/many-vacancies.html
@@ -44,7 +44,7 @@
     <div class="govuk-accordion__section-header">
       <h2 class="govuk-accordion__section-heading">
         <span class="govuk-accordion__section-button" id="accordion-default-heading-1">
-          Senior leadership
+          Managers
         </span>
       </h2>
     </div>
@@ -100,7 +100,7 @@
     <div class="govuk-accordion__section-header">
       <h2 class="govuk-accordion__section-heading">
         <span class="govuk-accordion__section-button" id="accordion-default-heading-2">
-          Teachers
+          Teachers, tutors, trainers and instructors
         </span>
       </h2>
     </div>
@@ -155,7 +155,7 @@
     <div class="govuk-accordion__section-header">
       <h2 class="govuk-accordion__section-heading">
         <span class="govuk-accordion__section-button" id="accordion-default-heading-3">
-          Teaching support
+          Support
         </span>
       </h2>
     </div>
