new start page copy

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -97,7 +97,7 @@
 
       <h2 class="govuk-heading-m">Second set of research with ITP's</h2>
 
-      <p>Small ITP flow - <a href="/prototypes/itp2/details">Start</a>
+      <p>ITP flow - <a href="/prototypes/itp2/details">Start</a>
       </p>
 
       <br><br>
