--- a/app/views/prototypes/itp2/role.html
+++ b/app/views/prototypes/itp2/role.html
@@ -47,12 +47,12 @@
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="where-do-you-live-2" name="where-do-you-live" type="radio" value="scotland">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
-          Senior leadership
+          Manager
         </label>
         
 
         <span id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
-          Principal, vice-principal, working director, CEO, part of a senior management team
+          Principal, vice-principal, working director, CEO, senior manager
         </span>
       </div><br>
 
@@ -69,11 +69,11 @@
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="where-do-you-live-3" name="where-do-you-live" type="radio" value="wales">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live-3">
-          Teaching support
+          Support
         </label>
 
         <span id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
-          Learner mentor, pastoral tutor, assessor, technician, teaching assistant
+          Mentor, assessor, technician, teaching assistant
         </span>
       </div><br>
 
