new start page copy

--- a/app/views/prototypes/itp2/staff-totals.html
+++ b/app/views/prototypes/itp2/staff-totals.html
@@ -50,7 +50,7 @@ Include part-time staff.
       Managers
     </label>
     <span id="sort-code-hint" class="govuk-hint">
-          Principals, vice-principals, working directors, CEOs, senior managers
+          Principals, vice-principals, working directors, CEOs
         </span>
     <input class="govuk-input govuk-input--width-10" id="address-postcode" name="address-postcode" type="text">
   </div>
