--- a/app/views/prototypes/itp2/role.html
+++ b/app/views/prototypes/itp2/role.html
@@ -47,12 +47,12 @@
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="where-do-you-live-2" name="where-do-you-live" type="radio" value="scotland">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
-          Manager
+          Senior manager
         </label>
         
 
         <span id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
-          Principal, vice-principal, working director, CEO, senior manager
+          Principal, vice-principal, working director, CEO
         </span>
       </div><br>
 
