new start page copy

--- a/app/views/prototypes/itp2/staff-totals.html
+++ b/app/views/prototypes/itp2/staff-totals.html
@@ -45,7 +45,7 @@ Include part-time staff.
       <li class="browse-list-item">
         <a class="browse-list-item-link" href="answers-staff">Managers</a>
         <p class="browse-list-item-subtext">
-            Principals, vice-principals, working directors, CEOs<a href="#"></a>
+            Senior and middle managers, principals, vice-principals, working directors, CEOs<a href="#"></a>
           </p>
           <input class="govuk-input govuk-input--width-10" id="address-postcode" name="address-postcode" type="text"> 
         
@@ -67,7 +67,7 @@ Include part-time staff.
         <a class="browse-list-item-link" href="#nope">Support</a>
 
         <p class="browse-list-item-subtext">
-            Mentors, assessors, technicians, teaching assistants<a href="#"></a>
+            Mentors, assessors, technicians, teaching assistants or anyone in a learning support role<a href="#"></a>
           </p>
            <input class="govuk-input govuk-input--width-10" id="address-postcode" name="address-postcode" type="text">
         
