--- a/app/views/prototypes/itp2/staff-totals.html
+++ b/app/views/prototypes/itp2/staff-totals.html
@@ -22,9 +22,6 @@
 
   <h1 class="govuk-heading-m">Impact Training Limited
   <span class="govuk-caption-m">UKPRN: 00012345</span></h1>
-
-  
-    
         
           <div class="govuk-form-group">
 
@@ -43,28 +40,24 @@ Include part-time staff.
   <ul class="browse-list">
     
       <li class="browse-list-item">
-        <a class="browse-list-item-link" href="answers-staff">Managers</a>
+        <h2 class="govuk-heading-m">Managers</h2>
         <p class="browse-list-item-subtext">
-            Senior and middle managers, principals, vice-principals, working directors, CEOs<a href="#"></a>
+            Senior and middle managers, principals, vice-principals, working directors, CEOs
           </p>
-          <input class="govuk-input govuk-input--width-10" id="address-postcode" name="address-postcode" type="text"> 
-        
+          <input class="govuk-input govuk-input--width-10" id="address-postcode" name="address-postcode" type="text">
       </li>
     
       <li class="browse-list-item">
-        <a class="browse-list-item-link" href="role">Teachers</a>
+        <h2 class="govuk-heading-m">Teachers or trainers</h2>
         
         
           <p class="browse-list-item-subtext">
-            Staff who teach as part of their role<a href="#"></a>
-          </p>
+            Staff who teach or train as part of their role</p>
           <input class="govuk-input govuk-input--width-10" id="address-postcode" name="address-postcode" type="text">
-        
-        
       </li>
     
       <li class="browse-list-item">
-        <a class="browse-list-item-link" href="#nope">Support</a>
+        <h2 class="govuk-heading-m">Support</h2>
 
         <p class="browse-list-item-subtext">
             Mentors, assessors, technicians, teaching assistants or anyone in a learning support role<a href="#"></a>
