--- a/app/views/prototypes/itp2/staff-totals.html
+++ b/app/views/prototypes/itp2/staff-totals.html
@@ -40,24 +40,23 @@ Include part-time staff.
   <ul class="browse-list">
     
       <li class="browse-list-item">
-        <h2 class="govuk-heading-m">Managers</h2>
+       <h2 class="govuk-heading-m govuk-!-font-size-27 govuk-!-margin-bottom-2">Managers</h2>
         <p class="browse-list-item-subtext">
-            Senior and middle managers, principals, vice-principals, working directors, CEOs
-          </p>
+            Senior and middle managers, principals, vice-principals, working directors, CEOs</p>
           <input class="govuk-input govuk-input--width-10" id="address-postcode" name="address-postcode" type="text">
-      </li>
+      </li><br>
     
       <li class="browse-list-item">
-        <h2 class="govuk-heading-m">Teachers or trainers</h2>
+        <h2 class="govuk-heading-m govuk-!-font-size-27 govuk-!-margin-bottom-2">Teachers or trainers</h2>
         
         
           <p class="browse-list-item-subtext">
             Staff who teach or train as part of their role</p>
           <input class="govuk-input govuk-input--width-10" id="address-postcode" name="address-postcode" type="text">
-      </li>
+      </li><br>
     
       <li class="browse-list-item">
-        <h2 class="govuk-heading-m">Support</h2>
+        <h2 class="govuk-heading-m govuk-!-font-size-27 govuk-!-margin-bottom-2">Support</h2>
 
         <p class="browse-list-item-subtext">
             Mentors, assessors, technicians, teaching assistants or anyone in a learning support role<a href="#"></a>
